--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,8 +3,8 @@ on:
   release:
     types: [released, prereleased]
 jobs:
-  publish:
-    name: Release build and publish
+  publish-jvm-native:
+    name: Release build and publish (JVM/Native)
     runs-on: macOS-latest
     steps:
       - name: Check out code
@@ -23,3 +23,16 @@ jobs:
           ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_PASSWORD }}
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.GPG_KEY_CONTENTS }}
 
+  build-js:
+    name: Build for JS
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: 21
+      - name: Build JS artifacts
+        run: ./gradlew assembleJs
