--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,6 +30,8 @@ jobs:
             os: ubuntu-latest
           - target: testAndroidHostTest
             os: ubuntu-latest
+          - target: jsTest
+            os: ubuntu-latest
     runs-on: ${{ matrix.os }}
 
     steps:
